Changing Whats URL, and making BTopBtn in teh left

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <br><br>
             <div>
                 <ul class="social-list">
-                    <li><a target="_blank" href="https://web.whatsapp.com/send?phone=967775600067"><i class="fab fa-whatsapp"></i></a></li>
+                    <li><a target="_blank" href="https://api.whatsapp.com/send?phone=967775600067"><i class="fab fa-whatsapp"></i></a></li>
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fas fa-envelope"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -1278,7 +1278,7 @@
                                 </div>
                             </div>
                             <ul class="social-list wow fadeInUp">
-                                <li><a target="_blank" href="https://web.whatsapp.com/send?phone=967775600067"><i class="fab fa-whatsapp"></i></a></li>
+                                <li><a target="_blank" href="https://api.whatsapp.com/send?phone=967775600067"><i class="fab fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fas fa-envelope"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
