--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Fonts -->
     <link href='http://fonts.googleapis.com/earlyaccess/droidarabickufi.css' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/earlyaccess/notokufiarabic' rel='stylesheet' type='text/css' />
     <link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amiri|El+Messiri" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
@@ -251,8 +252,8 @@
         <div id="about-02">
             <div class="content-box-md">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-4 wow slideInLeft" >
+                    <div class="row row-flex">
+                        <div class="col-md-4 col-sm-4 wow slideInLeft col-flex" >
                             <div class="about-item text-center">
                                 <i class="fa fa-eye"></i>
                                 <h3>رؤيتنا</h3>
@@ -262,7 +263,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-4 wow slideInUp" data-wow-duration="2s">
+                        <div class="col-md-4 col-sm-4 wow slideInUp  col-flex" data-wow-duration="2s">
                             <div class="about-item text-center">
                                 <i class="fa fa-rocket"></i>
                                 <h3>مهمتنا</h3>
@@ -272,7 +273,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-4 wow slideInRight" >
+                        <div class="col-md-4 col-sm-4 wow slideInRight  col-flex" >
                             <div class="about-item text-center">
                                 <i class="fa fa-pen"></i>
                                 <h3>أهدافنا</h3>
@@ -307,11 +308,11 @@
 
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-7 col-sm-7 wow slideInRight">
+                    <div class="row row-flex">
+                        <div class="col-md-7 col-sm-7 wow slideInRight col-flex">
                             <img src="img/services/laptop-lamp.png" alt="خدمات انفعني" class="img-responsive">
                         </div>
-                        <div class="col-md-5 col-sm-5 wow slideInLeft">
+                        <div class="col-md-5 col-sm-5 wow slideInLeft ">
                             <!--sevice 01 -->
                             <div class="service">
                                 <div class="row">
