--- a/index.html
+++ b/index.html
@@ -414,7 +414,11 @@
                                     <div class="tab-bg">
                                         <h2>01</h2>
                                         <h3>أفضل البرمجيات في اليمن</h3>
-                                        <p>انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .
+                                        <p>انا بيجرب الان للعيه
+                                            فقط لاغير عشان اجرب اللغة العرية في هذا الموقع قد ربمال تسبر وقدربما لا .انا بيجرب 
+                                            الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع  قد ربمال تسبر وقدربما 
+                                            لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع
+                                            قد ربمال تسبر وقدربما لا .
                                         </p>
                                         <div id="service-02-btn-01">
                                             <a class="btn btn-general btn-yellow smooth-scroll" href="#services" title="اطلب خدمتك" role="button">أطلب خدمتك</a>
@@ -436,7 +440,11 @@
                                     <div class="tab-bg">
                                         <h2>02</h2>
                                         <h3>تقديم مساعدة احترافية في مشاريع وتكاليف الطلاب بشتى انواعها</h3>
-                                        <p>انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .
+                                           <p>انا بيجرب الان للعيه
+                                            فقط لاغير عشان اجرب اللغة العرية في هذا الموقع قد ربمال تسبر وقدربما لا .انا بيجرب 
+                                            الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع  قد ربمال تسبر وقدربما 
+                                            لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع
+                                            قد ربمال تسبر وقدربما لا .
                                         </p>
                                         <div id="service-02-btn-02">
                                             <a class="btn btn-general btn-yellow smooth-scroll" href="#services" title="اطلب خدمتك" role="button">أطلب خدمتك</a>
@@ -458,7 +466,11 @@
                                     <div class="tab-bg">
                                         <h2>03</h2>
                                         <h3>أفضل البرمجيات في اليمن</h3>
-                                        <p>انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .
+                                           <p>انا بيجرب الان للعيه
+                                            فقط لاغير عشان اجرب اللغة العرية في هذا الموقع قد ربمال تسبر وقدربما لا .انا بيجرب 
+                                            الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع  قد ربمال تسبر وقدربما 
+                                            لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع
+                                            قد ربمال تسبر وقدربما لا .
                                         </p>
                                         <div id="service-02-btn-03">
                                             <a class="btn btn-general btn-yellow smooth-scroll" href="#services" title="اطلب خدمتك" role="button">أطلب خدمتك</a>
@@ -480,7 +492,11 @@
                                     <div class="tab-bg">
                                         <h2>04</h2>
                                         <h3>أفضل البرمجيات في اليمن</h3>
-                                        <p>انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .
+                                            <p>انا بيجرب الان للعيه
+                                            فقط لاغير عشان اجرب اللغة العرية في هذا الموقع قد ربمال تسبر وقدربما لا .انا بيجرب 
+                                            الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع  قد ربمال تسبر وقدربما 
+                                            لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع
+                                            قد ربمال تسبر وقدربما لا .
                                         </p>
                                         <div id="service-02-btn-04">
                                             <a class="btn btn-general btn-yellow smooth-scroll" href="#services" title="اطلب خدمتك" role="button">أطلب خدمتك</a>
@@ -502,7 +518,11 @@
                                     <div class="tab-bg">
                                         <h2>05</h2>
                                         <h3>تقديم مساعدة احترافية في مشاريع وتكاليف الطلاب بشتى انواعها</h3>
-                                        <p>انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .
+                                         <p>انا بيجرب الان للعيه
+                                            فقط لاغير عشان اجرب اللغة العرية في هذا الموقع قد ربمال تسبر وقدربما لا .انا بيجرب 
+                                            الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع  قد ربمال تسبر وقدربما 
+                                            لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع
+                                            قد ربمال تسبر وقدربما لا .
                                         </p>
                                         <div id="service-02-btn-05">
                                             <a class="btn btn-general btn-yellow smooth-scroll" href="#services" title="اطلب خدمتك" role="button">أطلب خدمتك</a>
@@ -524,7 +544,11 @@
                                     <div class="tab-bg">
                                         <h2>06</h2>
                                         <h3>أفضل البرمجيات في اليمن</h3>
-                                        <p>انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .
+                                            <p>انا بيجرب الان للعيه
+                                            فقط لاغير عشان اجرب اللغة العرية في هذا الموقع قد ربمال تسبر وقدربما لا .انا بيجرب 
+                                            الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع  قد ربمال تسبر وقدربما 
+                                            لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع
+                                            قد ربمال تسبر وقدربما لا .
                                         </p>
                                         <div id="service-02-btn-06">
                                             <a class="btn btn-general btn-yellow smooth-scroll" href="#services" title="اطلب خدمتك" role="button">أطلب خدمتك</a>
@@ -546,7 +570,11 @@
                                     <div class="tab-bg">
                                         <h2>07</h2>
                                         <h3>تقديم مساعدة احترافية في مشاريع وتكاليف الطلاب بشتى انواعها</h3>
-                                        <p>انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .
+                                           <p>انا بيجرب الان للعيه
+                                            فقط لاغير عشان اجرب اللغة العرية في هذا الموقع قد ربمال تسبر وقدربما لا .انا بيجرب 
+                                            الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع  قد ربمال تسبر وقدربما 
+                                            لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع
+                                            قد ربمال تسبر وقدربما لا .
                                         </p>
                                         <div id="service-02-btn-07">
                                             <a class="btn btn-general btn-yellow smooth-scroll" href="#services" title="اطلب خدمتك" role="button">أطلب خدمتك</a>
@@ -568,7 +596,11 @@
                                     <div class="tab-bg has-ul">
                                         <h2>08</h2>
                                         <h3>أفضل البرمجيات في اليمن</h3>
-                                        <p>انا بيجرب الان للعيه في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع الاهبل قد ربمال تسبر وقدربما لا .
+                                          <p>انا بيجرب الان للعيه
+                                            فقط لاغير عشان اجرب اللغة العرية في هذا الموقع قد ربمال تسبر وقدربما لا .انا بيجرب 
+                                            الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع  قد ربمال تسبر وقدربما 
+                                            لا .انا بيجرب الان للعيه فقط لاغير عشان اجرب اللغة العرية في هذا الموقع
+                                            قد ربمال تسبر وقدربما لا .
                                         </p>
                                         <ul class="press2 ">
                                             <li class="inner-service">
