--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                                 </div>
                             </div>
                             <p>
-                                أفضل شركة  على الاطلاق شركة بكم بامتياز اتعاملوا معاها واصل هاهاهاهاهاه والله والل صدق بينحاكيكم ، تعريف البللم: هو عبارة عن هبرتيات متناسقة فيما بينها لتكوين البعبع
+                              خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح
                             </p>
                             <div class="author">
                                 <div class="row">
@@ -957,8 +957,8 @@
                                     </div>
                                 </div>
                             </div>
-                             <p>
-                                أفضل شركة  على الاطلاق شركة بكم بامتياز اتعاملوا معاها واصل هاهاهاهاهاه والله والل صدق بينحاكيكم ، تعريف البللم: هو عبارة عن هبرتيات متناسقة فيما بينها لتكوين البعبع
+                            <p>
+                              خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح
                             </p>
                             <div class="author">
                                 <div class="row">
@@ -991,8 +991,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <p>
-                                أفضل شركة  على الاطلاق شركة بكم بامتياز اتعاملوا معاها واصل هاهاهاهاهاه والله والل صدق بينحاكيكم ، تعريف البللم: هو عبارة عن هبرتيات متناسقة فيما بينها لتكوين البعبع
+                           <p>
+                              خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح خدمة ممتازة ومتطورة، اتمنى لهم المزيد من التفوق والنجاح
                             </p>
                             <div class="author">
                                 <div class="row">
